--- a/OnePage+VB/index.html
+++ b/OnePage+VB/index.html
@@ -15,6 +15,8 @@
     <!-- VIDEO CONTAINER -->
     <div id="container"><video loop autoplay muted width="100%">
     <source src="World.mov" type="video/mp4">
+    <source src="World.ogg" type="video/ogg">
+    <source src="World.webm" type="video/webm">
     </video>
     </div>
 
