--- a/OnePage+VB/index.html
+++ b/OnePage+VB/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,9 @@
     <source src="World.webm" type="video/webm">
     </video>
     </div>
-
+    
+    <!-- VIDEO END -->
+    
   </head>
 
   <!-- --------------------------------------- -->
