--- a/OnePage+VB/index.html
+++ b/OnePage+VB/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="fr">
+  
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -91,6 +93,10 @@
 
 <!-- FOOTER END-------------------->
 
+
+
+<!-- SCRIPT SCROLL ANIMATE------------------>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -99,9 +105,9 @@
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-<!-- SCRIPT SCROLL ANIMATE------------------>
-
 <script src="scroll-nav.js"></script>
+
+<!-- SCRIPT SCROLL ANIMATE END------------------>
 
   </body>
 </html>
