--- a/OnePage+VB/index.html
+++ b/OnePage+VB/index.html
@@ -6,9 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    
     <title>Bootstrap One Page</title>
-
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -93,8 +92,7 @@
 
 <!-- FOOTER END-------------------->
 
-
-<!-- SCRIPT SCROLL ANIMATE------------------>
+<!-- SCRIPT MENU SCROLL ANIMATE------------------>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -106,7 +104,7 @@
 
 <script src="scroll-nav.js"></script>
 
-<!-- SCRIPT SCROLL ANIMATE END------------------>
+<!-- SCROLL ANIMATE END------------------>
 
   </body>
 </html>
