--- a/5PagesMed/index.html
+++ b/5PagesMed/index.html
@@ -9,7 +9,6 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-
  </head>
 
 <!-- --------------------------------------- -->
@@ -52,7 +51,7 @@
   <!--/#France-->
   <div id="home" class="page-section">
       <div class="container">
-      <h2>NOW</h2>
+      <h2>HOME</h2>
       <p class="caption">
       Ob haec et huius modi multa, quae cernebantur in paucis, omnibus timeri sunt coepta. et ne tot malis dissimulatis paulatimque serpentibus acervi crescerent aerumnarum, nobilitatis decreto legati mittuntur: Praetextatus ex urbi praefecto et ex vicario Venustus et ex consulari Minervius oraturi, ne delictis supplicia sint grandiora, neve senator quisquam inusitato et inlicito more tormentis exponeretur.
       </br></br>
@@ -139,7 +138,6 @@ if (typeof console === "undefined") {
     };
 }
 </script>
-
 <!-- SCRIPT END -->
 
 </body>
