--- a/OnePagePays/index.html
+++ b/OnePagePays/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible">
@@ -9,7 +10,6 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-
  </head>
 
 <!-- --------------------------------------- -->
@@ -129,6 +129,7 @@ $(document).ready(function() {
 	});
 });
 
+	
 // scroll function
 function scrollToID(id, speed){
 	var offSet = 50;
