--- a/Collapse.html
+++ b/Collapse.html
@@ -1,7 +1,11 @@
 
 <!-- Collapse Test
-EX : http://www.w3schools.com/Bootstrap/bootstrap_collapse.asp
+
+EX COLLAPS : http://www.w3schools.com/Bootstrap/bootstrap_collapse.asp
 http://v4-alpha.getbootstrap.com/components/collapse/#example
+
+20 Useful CSS Snippets for Responsive Menus  https://envato.com/blog/css-snippets-responsive-menus/
+
 -->
 
 
@@ -15,7 +19,6 @@ http://v4-alpha.getbootstrap.com/components/collapse/#example
 </head>
 
 <body>
-
   
 <div class="container">
 
