--- a/Flexbox horizontal/index.html
+++ b/Flexbox horizontal/index.html
@@ -58,23 +58,12 @@
 <!-- TEXT -->
 <div class="text">
      
-<p>Spécialiste de l’intégration d’équipement audio-vidéo et domotique, L Audiovidéiste vous accompagne et conçoit des solutions complètes, intégrées et sur-mesure pour le professionnel et le particulier.
-</p>
-
-<p>De la salle de réunion au Home-Cinéma, de la sonorisation d’espaces au système audio Multi-room, de la télécommande universelle au pilotage centralisé sur tablette tactile, L Audiovidéiste réalise l’installation, clef en main, de votre système audio-vidéo et domotique. </p>
-
-<p>L Audiovidéiste propose une intégration complète qui passe par l’étude technique, la prévisualisation 3D du projet, le choix des matériels adaptés, la création de mobilier et d’aménagement sur mesure, la confection de l’interface de pilotage, la formation à l’utilisation et la maintenance.</p>
-
-<p>L’intégration passe aussi par l’ameublement. L Audiovidéiste fabrique sur mesure vos meubles afin de se fondre au mieux dans votre intérieur en alliant vos exigences esthétiques avec les contraintes techniques du matériel à intégrer : bibliothèque, meuble TV, bureau, étagères, meuble de cuisine, etc.</p>
-
-<p>L Audiovidéiste renforce son expertise avec plusieurs certifications de constructeurs, leaders dans leur domaine, acquises au cours de 12 années d’expériences comme Crestron, Extron, Kramer, LifeSize…</p>
-
-<p>Basé dans la région Rhône-Alpes Auvergne, à 20km de Lyon, nous intervenons sur l’ensemble de la France. </p>
+<p>Iis igitur est difficilius satis facere, qui se Latina scripta dicunt contemnere. in quibus hoc primum est in quo admirer, cur in gravissimis rebus non delectet eos sermo patrius, cum idem fabellas Latinas ad verbum e Graecis expressas non inviti legant. quis enim tam inimicus paene nomini Romano est, qui Ennii Medeam aut Antiopam Pacuvii spernat aut reiciat, quod se isdem Euripidis fabulis delectari dicat, Latinas litteras oderit?</p>
 
 </div>
 
 <div class="text2">    
-    <p>Pour tout renseignement : <u>contact@laudiovideiste.fr</u></p>
+    <p>Pour tout renseignement : <u>contact@site.fr</u></p>
 </div>
 
 <div class="social">
