--- a/Flexbox horizontal/index.html
+++ b/Flexbox horizontal/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>L Audiovidéiste</title>
+    <title>Site web</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +20,8 @@
 <!-- LOGO -->
 <div class="logo">
     <div class="container">
-    <img src="img/LOGO_1.jpg" alt="..." class=".img-thumbnail"> 
-    <p>Solutions Audio-Vidéo Intégrées et Ameublement Sur-Mesure</p>
+    <img src="img/NG.png" alt="..." class=".img-thumbnail"> 
+    <p>Solutions Sur-Mesure</p>
     </div>
 </div>
 
